Navbar button and menu were not working well on mobile for a fixed navbar. Switch to a static navbar until we fix it.

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,6 +1,4 @@
 ---
 ---
- 
-body { padding-top: 50px; }
     
 @import "bootstrap";
